[project]
name = "stack-montage"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers",
    "moviepy>=2.2.1",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.12.0",
    "voxcpm>=2.0.3",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
